--- a/Admin/public/index.html
+++ b/Admin/public/index.html
@@ -15,7 +15,7 @@
         margin: 0;
       }
     </style>
-  <title>Attuned Pathways Admin</title>
+  <title>Aim Tasker</title>
 </head>
 
 <body>
